log
Thu Apr 30 08:10:20 PM UTC 2026: 
 tests:  1|8
total_score: 0/60
1ca73ab
Thu Apr 30 08:11:15 PM UTC 2026: 
 tests:  1|8
total_score: 0/60
35f8405
Thu Apr 30 08:17:05 PM UTC 2026: 
 treemap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/60
a3bd9d7
Thu Apr 30 08:32:10 PM UTC 2026: 
 treemap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:66:43: error: expected ‘;’ before ‘if’
   66 |         keyComp = tree->current->pair->key
      |                                           ^
      |                                           ;
   67 |         if(keyComp == key) {
      |         ~~                                 
treemap.c:62:11: error: variable ‘keyComp’ set but not used [-Werror=unused-but-set-variable]
   62 |     void* keyComp = key;
      |           ^~~~~~~
cc1: all warnings being treated as errors
ec89f26
Thu Apr 30 08:33:08 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/60
dbfabc1
